--- a/package.json
+++ b/package.json
@@ -20,30 +20,33 @@
   },
   "homepage": "https://github.com/Algram/ytdl-webserver#readme",
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.19",
+    "@fortawesome/free-solid-svg-icons": "^5.9.0",
+    "@fortawesome/react-fontawesome": "^0.1.4",
     "@hapi/hapi": "^18.3.1",
     "@hapi/inert": "^5.2.0",
-    "@microlink/youtube-dl": "^1.13.2",
+    "@microlink/youtube-dl": "^2.0.0",
     "extract-text-webpack-plugin": "^3.0.2",
     "fluent-ffmpeg": "^2.1.2",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "validator": "^10.11.0"
+    "validator": "^11.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.4.3",
     "@babel/preset-env": "^7.4.3",
     "@babel/preset-react": "^7.0.0",
     "babel-loader": "^8.0.5",
-    "css-loader": "^2.1.1",
-    "mini-css-extract-plugin": "^0.6.0",
+    "css-loader": "^3.0.0",
+    "mini-css-extract-plugin": "^0.7.0",
     "node-sass": "^4.12.0",
     "postcss-loader": "^3.0.0",
     "sass-loader": "^7.1.0",
-    "standard": "^12.0.1",
+    "standard": "^13.0.2",
     "style-loader": "^0.23.1",
     "webpack": "^4.30.0",
-    "webpack-cli": "^3.3.1",
+    "webpack-cli": "^3.3.5",
     "webpack-dev-server": "^3.3.1"
   }
 }
